# photo_sorter

./: LICENSE  README.md  pyproject.toml
photo_sorter/: main.py
