[tool.poetry]
name = "photo-sorter"
version = "0.1.0"
description = ""
authors = ["Maarten Vermeulen <maartencvermeulen@yahoo.comix>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
argparse = "^1.4.0"
datetime = "^5.3"
logging = "^0.4.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
